# redes-project

./: .gitignore  README.md  my_wifi_unefa.py  my_wifi_unefa_linux.py  pyproject.toml  radius_keys.db  test_router.py
src/redes_project/: backend.py  cli.py  database.py  gui.py  main.py  router_control.py  scheduler.py
