[project]
name = "redes-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "qrcode>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redes_project"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "N",
    "SIM",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/tests",
]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportUnknownMemberType = false

[project.scripts]
start = "redes_project.cli:start"
lint = "redes_project.cli:lint"
fix = "redes_project.cli:fix"
check = "redes_project.cli:check"
